tests/functional2/lang/attrs/eval-fail-duplicate.err.exp
error: attribute 'a' already defined at /pwd/in.nix:1:3
       at /pwd/in.nix:1:10:
            1| { a = 1; a.b = 1; }
             |          ^
            2|
